--- a/test/fixtures/artwork_shares.yml
+++ b/test/fixtures/artwork_shares.yml
@@ -7,6 +7,7 @@
 #  viewer_id  :integer          not null
 #  created_at :datetime         not null
 #  updated_at :datetime         not null
+#  favorite   :boolean
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
